--- a/css/base.css
+++ b/css/base.css
@@ -123,6 +123,21 @@ li{
     text-align: center;
 }
 
+.animacao-tarefa {
+    opacity: 0;
+    animation: tarefa-fade-in 0.5s ease-in;
+}
+
+@keyframes tarefa-fade-in {
+    from{
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
 
 /* ===== MEDIA QUERY =====  */
 
