--- a/css/base.css
+++ b/css/base.css
@@ -21,8 +21,9 @@ body{
 }
 
 .top-text{
-    font-size: 3.5rem;
+    font-size: 5rem;
     margin-bottom: 1rem;
+    text-align: center;
 }
 
 .principal{
@@ -33,16 +34,18 @@ body{
     font-size: 1.2rem;
     border-radius: 1rem;
     border: none;
-    padding: 1rem;
+    padding: 1.3rem;
     background: #e0e0e0;
     box-shadow: inset 5px 5px 9px #d3d3d3,
                 inset -5px -5px 9px #ededed;
     outline: none;
+    color: var(--inTarefa);
+    width: 25rem;
 }
 
 .add-tarefa::placeholder{
     color: var(--inTarefa);
-    font-size: 1rem;
+    font-size: 1.4rem;
 }
 
 .btn-add-tarefa{
@@ -63,13 +66,13 @@ body{
 }
 
 li{
-    width: 20.7rem;
+    width: 25rem;
     display: flex;
     justify-content:space-between;
-    font-size: 1rem;
+    font-size: 1.2rem;
     border-radius: 1rem;
     border: none;
-    padding: .8rem;
+    padding: 1.2rem;
     background: #e0e0e0;
     box-shadow: inset 5px 5px 9px #d3d3d3,
                 inset -5px -5px 9px #ededed;
@@ -105,20 +108,20 @@ li{
 }
 
 .btn-acao_check:hover{
-    color: #2da23f;
+    color: #136920;
 }
 
 .btn-acao_trash:hover{
-    color: #f0426e;
+    color: #d30b3d;
 }
 
 .check{
     text-decoration: line-through;
-    text-decoration-color: #2da23f;
+    text-decoration-color: #136920;
 }
 
 #mensagemErro{
-    color: #f0426e;
+    color: #d30b3d;
     font-size: .9rem;
     text-align: center;
 }
@@ -155,5 +158,17 @@ li{
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+
+    .add-tarefa{
+        width: 17rem;
+    }
+
+    .add-tarefa::placeholder{
+        font-size: 1rem;
+    }
+
+    li{
+        width: 20.7rem;
     }
 }
